dist/1.0/bin/sample/retrieveUnpackaged/objects/Calculation_Task_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Bandwidth__c</fullName>
        <description>Bandwidth</description>
        <inlineHelpText>Bandwidth</inlineHelpText>
        <label>Bandwidth</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBCT_Calculation__c</fullName>
        <description>CBCT Calculation</description>
        <formula>Calculation_Version__r.CBCT_Calculation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CBCT Calculation</inlineHelpText>
        <label>CBCT Calculation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculation_Version__c</fullName>
        <description>Relation to Calculation Version</description>
        <inlineHelpText>Calculation Version</inlineHelpText>
        <label>Calculation Version</label>
        <referenceTo>Calculation_Version__c</referenceTo>
        <relationshipLabel>Calculation Tasks Pricing</relationshipLabel>
        <relationshipName>Calculation_Tasks_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capex_One_off__c</fullName>
        <description>Capex One-off from Task Pricing</description>
        <formula>Task_Pricing__r.Capex_One__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Capex One-off from Task Pricing</inlineHelpText>
        <label>Capex One-off</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capex_Re_useable__c</fullName>
        <description>Capex Re-useable from Task Pricing</description>
        <formula>Task_Pricing__r.Capex_Re_useable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Capex Re-useable from Task Pricing</inlineHelpText>
        <label>Capex Re-useable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <description>Contract Length from Task Pricing</description>
        <formula>TEXT(Task_Pricing__r.Contract_Length__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Length from Task Pricing</inlineHelpText>
        <label>Contract Length</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Currency from Task Pricing</description>
        <formula>TEXT(Task_Pricing__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Currency from Task Pricing</inlineHelpText>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <description>Medium</description>
        <inlineHelpText>Medium</inlineHelpText>
        <label>Medium</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opex_Monthly__c</fullName>
        <description>Opex Monthly from Task Pricing</description>
        <formula>Task_Pricing__r.Opex_Monthly__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opex Monthly from Task Pricing</inlineHelpText>
        <label>Opex Monthly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opex_One_off__c</fullName>
        <description>Opex One-off from Task Pricing</description>
        <formula>Task_Pricing__r.Opex_One_Off__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opex One-off from Task Pricing</inlineHelpText>
        <label>Opex One-off</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name from Request</description>
        <formula>Request__r.Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product Name from Request</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>Related Request</description>
        <inlineHelpText>Related Request</inlineHelpText>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Calculation Tasks Pricing</relationshipLabel>
        <relationshipName>Calculation_Tasks_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Pricing__c</fullName>
        <description>Related Task Pricing</description>
        <inlineHelpText>Related Task Pricing</inlineHelpText>
        <label>Task Pricing</label>
        <referenceTo>CTask_Pricing__c</referenceTo>
        <relationshipLabel>Calculation Tasks Pricing</relationshipLabel>
        <relationshipName>Calculation_Tasks_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <description>Related Task</description>
        <inlineHelpText>Related Task</inlineHelpText>
        <label>Task</label>
        <referenceTo>CTask__c</referenceTo>
        <relationshipLabel>Calculation Tasks Pricing</relationshipLabel>
        <relationshipName>Calculation_Tasks_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Calculation Task Pricing</label>
    <nameField>
        <label>Calculation Task Pricing  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calculation Tasks Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>